# Apex-Kinetic

./: CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml
config/hardware/: future-peripherals.yaml
config/k8s/: control-plane-deployment.yaml  control-plane-pod.yaml  data-plane-daemonset.yaml  data-plane-pod.yaml  network-policy.yaml  vision-node-deployment.yaml  vision-node-pod.yaml
config/kafka/: topics.yaml
control-plane/: Dockerfile  main.py  requirements.txt
control-plane/telemetry/: __init__.py  kafka_client.py
data-plane/: Cargo.toml  Dockerfile
data-plane/src/: lib.rs  main.rs
data-plane/src/drivers/: drv8835.rs  ir_receiver.rs  key.rs  line_tracking.rs  mod.rs  mpu6050.rs  rgb_led.rs  servo.rs  six_axis_arm.rs  speaker.rs  tb6612.rs  tft_display.rs  ultrasonic.rs  voltage.rs
data-plane/src/sensors/: proximity.rs
data-plane/tests/: driver_models.rs
docs/: drivers.md  future-integrations.md  local-deployment.md
infra/opentofu/app-k8s/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
infra/opentofu/app-k8s/tests/: workloads.tftest.hcl
scripts/: local-kind-deploy.sh
tests/: test_repository_contracts.py
vision-node/: Cargo.toml  Dockerfile
vision-node/src/: lib.rs  main.rs  rtsp_control.rs
vision-node/tests/: payload.rs  rtsp_control.rs
